# devhelp

./: Makefile.am  configure  meson.build  meson_options.txt
data/: Makefile.am  meson.build
data/dtd/: meson.build
data/icons/: Makefile.am  meson.build
docs/reference/: Makefile.am  meson.build
docs/reference/xml/: meson.build
misc/gedit-plugin/: Makefile.am  meson.build
po/: meson.build
src/: Makefile.am  meson.build
